# sermon-transcription

./: README.md  package-lock.json  package.json
app/: page.tsx
app/components/: Section.tsx
app/utility.ts/: consts.ts  types.ts
backend/: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  download_sermon_audio.py  main.py  pyproject.toml  scrape_sermon_link.py
backend/helper_functions/: download_sermon_audio.py  getSummary.py  get_summary.py  get_transcript.py  scrape_recent_sermon.py
backend/scrape_sermon_link/: scrapy.cfg
backend/scrape_sermon_link/scrape_sermon_link/: items.py  middlewares.py  pipelines.py  settings.py
backend/utility/: cleanup.py  download.py  download_sermon.py  logging.py  outline.py  outline_sermon.py  scrape_newest.py  scrape_recent_sermon.py  store.py  store_sermon.py  transcribe.py
frontend/: README.md  package-lock.json
frontend/app/: layout.tsx  page.tsx
frontend/app/components/: Nav.tsx  Section.tsx
frontend/app/utility.ts/: supabase.ts
