[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "assemblyai>=0.38.0",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "google-genai>=1.11.0",
    "logging>=0.4.9.6",
    "lxml-html-clean>=0.4.2",
    "pydantic>=2.11.3",
    "requests-html>=0.10.0",
    "supabase>=2.15.0",
    "yt-dlp>=2025.3.31",
]
