[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "assemblyai>=0.38.0",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "google-genai>=1.11.0",
    "selenium>=4.31.0",
    "supabase>=2.15.0",
    "yt-dlp>=2025.3.31",
]

[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["utility*"] 
exclude = ["sermons*"]